--- a/template/pages/about.html
+++ b/template/pages/about.html
@@ -226,7 +226,7 @@
     
     <div style="background-color: #a753ff;">
       <a href="./landingPage.html">
-        <img src="../static/assets/back-svgrepo-com" alt="Home" />
+        <img src="../static/assets/back-svgrepo-com (3).svg" alt="Home" />
       </a>
       </div>
     <section class="about">
@@ -314,7 +314,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
           />
         </div>
         <div class="card-info">
-          <h2 class="card-name">Amadu Hamza</h2>
+          <h2 class="card-name">Amadu  Hamza</h2>
           <p class="card-email">Front-end Engineer</p>
           <p class="card-role">Co-Founder</p>
           
@@ -338,16 +338,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
           </p>
         </small>
     </footer>
-    <script>
-        function myFunction() {
-          var x = document.getElementById("myTopnav");
-          if (x.className === "topnav") {
-            x.className += " responsive";
-          } else {
-            x.className = "topnav";
-          }
-        }
-      </script>
+   
       <script>
         document.getElementById("year").innerHTML = new Date().getFullYear();
       </script>
