--- a/template/pages/landingPage.html
+++ b/template/pages/landingPage.html
@@ -160,7 +160,7 @@
               <a href="/about" class="link">About</a>
 
               <a href="/login"><button>Login</button></a>
-              <a href=""><button>Register</button></a>
+              <a href="/signup"><button>Register</button></a>
             </div>
 
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
