--- a/template/pages/registrationForm.html
+++ b/template/pages/registrationForm.html
@@ -59,6 +59,9 @@
       border-radius: 5px;
       cursor: pointer;
   }
+  button:hover{
+    background-color: #b39eb5;
+  }
   
   #response {
       text-align: center;
@@ -76,7 +79,7 @@
             <input type="text" id="fullName" placeholder="Full Name" required>
             <input type="text" id="lastName" placeholder="Last Name" required>
             <input type="password" id="password" placeholder="Password" required>
-            <input type="tel" id="phone" placeholder="Phone" required>
+            <input type="tel" id="phone" placeholder="Phone, start with your country code without 0" required>
             <input type="email" id="email" placeholder="Email" required>
             <input type="text" id="companyName" placeholder="Company Name" required>
             <input type="text" id="username" placeholder="Username" required>
