made an adjustments to the about page

--- a/template/pages/about.html
+++ b/template/pages/about.html
@@ -226,7 +226,7 @@
     
     <div style="background-color: #a753ff;">
       <a href="./landingPage.html">
-        <img src="../static/assets/back-svgrepo-com" alt="Home" />
+        <img src="../static/assets/back-svgrepo-com (3).svg" alt="Home" />
       </a>
       </div>
     <section class="about">
