--- a/template/pages/contact.html
+++ b/template/pages/contact.html
@@ -51,6 +51,7 @@
               <input
                 type="text"
                 id="name"
+                name="name"
                 placeholder="Enter your name"
                 required
               />
@@ -59,6 +60,7 @@
               <input
                 type="email"
                 id="email"
+                name='email'
                 placeholder="Enter your email"
                 required
               />
@@ -67,6 +69,7 @@
               <input
                 type="text"
                 id="message"
+                name="message"
                 placeholder="Enter your Message"
                 required
               />
