corrected issues with navigation

--- a/template/pages/about.html
+++ b/template/pages/about.html
@@ -225,7 +225,7 @@
   <body>
     
     <div style="background-color: #a753ff;">
-      <a href="./landingPage.html">
+      <a href="/">
         <img src="../static/assets/back-svgrepo-com (3).svg" alt="Home" />
       </a>
       </div>
@@ -268,7 +268,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
             <p class="card-email">Back-end Engineer</p>
             <p class="card-role">CEO and Founder</p>
             <p class="card-email">n.u.kingsley@gmail.com</p>
-            <p><button class="button">Contact</button></p>
+            <p><a href='https://shorturl.at/jpqH3' target='_blank'><button class="button">Contact</button></a></p>
           </div>
         </div>
 
@@ -302,7 +302,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
             <p class="card-email">Back-end Engineer</p>
             <p class="card-role">Co-Founder</p>
             <p class="card-email">emekky54@gmail.com</p>
-            <p><button class="button">Contact</button></p>
+            <p><a href='https://linkedin.com/in/abasiemek-akpanekam-a6a158243' target='_blank'><button class="button">Contact</button></p></a>
           </div>
         </div>
           <!-- Card 4 -->
@@ -319,7 +319,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
           <p class="card-role">Co-Founder</p>
           
           <p class="card-email">amaduhamzjaarah300@gmail.com</p>
-          <a href=""><p><button class="button">Contact</button></p></a>
+          <a href="https://twitter.com/AmaduHamza300" target='_blank'><p><button class="button">Contact</button></p></a>
         </div>
       </div>
     </div>
