--- a/template/pages/login.html
+++ b/template/pages/login.html
@@ -127,7 +127,7 @@
   </head>
   <body>
     <main>
-      <a href="./landingPage.html">
+        <a href={{url_for('home')}}>
         <img src="../static/assets/back-svgrepo-com (3).svg" alt="" />
       </a>
       <div class="login-welcome-row">
