--- a/template/pages/registrationForm.html
+++ b/template/pages/registrationForm.html
@@ -70,7 +70,7 @@
   </style>
 </head>
 <body>
-  <a href="./landingPage.html">
+  <a href="./login">
     <img src="../static/assets/back-svgrepo-com (3).svg" alt="home" />
   </a>
     <div class="container">
