fixed navigation issues

--- a/template/pages/login.html
+++ b/template/pages/login.html
@@ -157,10 +157,10 @@
         <div class="my-form__actions">
           <div class="my-form__row">
             <span>Did you forget your password?</span>
-            <a href="" title="Reset Password"> Reset Password </a>
+            <a href="/recovery" title="Reset Password"> Reset Password </a>
           </div>
           <div class="my-form__signup">
-            <a href="#" title="Create Account"> Register as Vendor</a>
+            <a href="/signup" title="Create Account"> Register as Vendor</a>
           </div>
         </div>
       </form>
