--- a/template/pages/login.html
+++ b/template/pages/login.html
@@ -134,11 +134,12 @@
         <h1>Welcome back to &#x1F44F;</h1>
         <p>Please enter your details!</p>
       </div>
-      <form action="/recovery" method="post" id="resetPasswordForm">
+      <form action="/login" method="post" id="resetPasswordForm">
         <label for="email">Email:</label>
         <input
           type="email"
           id="email"
+          name='email'
           placeholder="Enter your email "
           required
         />
@@ -146,6 +147,7 @@
         <input
           type="password"
           id="password"
+          name = 'password'
           placeholder="Enter your password"
           title="Minimum 6 characters at 
                                     least 1 Alphabet and 1 Number"
