changed the route in the error page

--- a/template/pages/403.html
+++ b/template/pages/403.html
@@ -14,7 +14,7 @@
       <h3>Oops, access forbidden</h3>
       <p>You are not allowed to enter here</p>
       <p>
-        Otherwise, <a href="vendorPage.html"><button>Go to home</button></a>
+        Otherwise, <a href="/"><button>Go to home</button></a>
       </p>
     </div>
   </body>
