the logo png is locateed at the asset in the static

--- a/template/pages/landingPage.html
+++ b/template/pages/landingPage.html
@@ -151,7 +151,7 @@
                 ><img
                   width="70px"
                   height="50px"
-                  src="../static/login-02/assets/trackerr-logo.jpg"
+                  src="/Trackerr/static/assets/"
                   alt="Logo"
                   class="logo"
               /></a>
@@ -160,7 +160,7 @@
               <a href="/about" class="link">About</a>
 
               <a href="/login"><button>Login</button></a>
-              <a href="/signup"><button>Register</button></a>
+              <a href=""><button>Register</button></a>
             </div>
 
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -215,7 +215,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../static/scripts/landingPage.js"></script>
     <script src="../static/scripts/dummy.js"></script>
-    <script hrf="/Tracker/static/scripts/dummy/script>
+
     <script>
       function myFunction() {
         var x = document.getElementById("myTopnav");
@@ -227,15 +227,15 @@
       }
     </script>
     <script>
-      document.getElementById("year").innerHTML = new Date().getFullYear();
-    </script>
+        document.getElementById("year").innerHTML = new Date().getFullYear();
+      </scr>
 
-    <script>
-      const login = document.getElementById("login");
-      login.addEventListener("click", function () {
-        // Redirect to the login page
-        window.location.href = "./login.html";
-      });
+      <script>
+        const login = document.getElementById("login");
+        login.addEventListener("click", function () {
+          // Redirect to the login page
+          window.location.href = "./login.html";
+        });
     </script>
     <script>
       const status = document.getElementById("detail-button");
