--- a/template/pages/registrationForm.html
+++ b/template/pages/registrationForm.html
@@ -348,6 +348,7 @@
         </form>
         
     </div>
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    <script> 
      $(document).ready(function () {
   $("#registrationForm").submit(function (event) {
@@ -364,12 +365,12 @@
       service: $("#service").val(),
       city: $("#city").val(),
       country: $("#country").val(),
-      companyAddr: $("#ScompanyAddr").val(),
+      companyAddr: $("#companyAddr").val(),
     };
 
     $.ajax({
       type: "POST",
-      url: "your_server_url_here", // Replace with your server endpoint
+      url: "/signup", // Replace with your server endpoint
       data: formData,
       success: function (response) {
         $("#response").text("Registration successful!");
