corrected the names

--- a/template/pages/about.html
+++ b/template/pages/about.html
@@ -266,7 +266,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
           <div class="card-info">
             <h2 class="card-name">Ukaegbu Kingsley</h2>
             <p class="card-email">Back-end Engineer</p>
-            <p class="card-role">CEO and Founder</p>
+            <p class="card-role">CTO and Founder</p>
             <p class="card-email">n.u.kingsley@gmail.com</p>
             <p><a href='https://shorturl.at/jpqH3' target='_blank'><button class="button">Contact</button></a></p>
           </div>
@@ -281,7 +281,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
             />
           </div>
           <div class="card-info">
-            <h2 class="card-name">Akpanekam Abasiemek</h2>
+            <h2 class="card-name">Yahaya</h2>
             <p class="card-email">Front-end Engineer</p>
             <p class="card-role">Co-Founder</p>
             <p class="card-email">yahya@gmail.com</p>
@@ -298,7 +298,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
             />
           </div>
           <div class="card-info">
-            <h2 class="card-name">Bliss</h2>
+            <h2 class="card-name">Akpanekam Abasiemek</h2>
             <p class="card-email">Back-end Engineer</p>
             <p class="card-role">Co-Founder</p>
             <p class="card-email">emekky54@gmail.com</p>
