corrected the names

--- a/template/pages/about.html
+++ b/template/pages/about.html
@@ -265,7 +265,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
           </div>
           <div class="card-info">
             <h2 class="card-name">Ukaegbu Kingsley</h2>
-            <p class="card-email">Back-end Engineer</p>
+            <p class="card-email">Backend Engineer</p>
             <p class="card-role">CTO and Founder</p>
             <p class="card-email">n.u.kingsley@gmail.com</p>
             <p><a href='https://shorturl.at/jpqH3' target='_blank'><button class="button">Contact</button></a></p>
@@ -282,7 +282,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
           </div>
           <div class="card-info">
             <h2 class="card-name">Yahaya</h2>
-            <p class="card-email">Front-end Engineer</p>
+            <p class="card-email">Frontend Engineer</p>
             <p class="card-role">Co-Founder</p>
             <p class="card-email">yahya@gmail.com</p>
             <p><button class="button">Contact</button></p>
@@ -299,7 +299,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
           </div>
           <div class="card-info">
             <h2 class="card-name">Akpanekam Abasiemek</h2>
-            <p class="card-email">Back-end Engineer</p>
+            <p class="card-email">Backend Engineer</p>
             <p class="card-role">Co-Founder</p>
             <p class="card-email">emekky54@gmail.com</p>
             <p><a href='https://linkedin.com/in/abasiemek-akpanekam-a6a158243' target='_blank'><button class="button">Contact</button></p></a>
@@ -315,7 +315,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
         </div>
         <div class="card-info">
           <h2 class="card-name">Amadu  Hamza</h2>
-          <p class="card-email">Front-end Engineer</p>
+          <p class="card-email">Frontend Engineer</p>
           <p class="card-role">Co-Founder</p>
           
           <p class="card-email">amaduhamzjaarah300@gmail.com</p>
