commented an unnecessary tag

--- a/template/pages/landingPage.html
+++ b/template/pages/landingPage.html
@@ -197,7 +197,7 @@
     <main>
       <!--  HTML structure to include a container for product details -->
       <div id="searchResults">
-        <h2>My Parcels</h2>
+          <!-- <h2>My Parcels</h2>-->
       </div>
       <div id="productDetails"></div>
 
