fixed a bug in the tracking retrieval route

--- a/template/pages/about.html
+++ b/template/pages/about.html
@@ -285,7 +285,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
             <p class="card-email">Frontend Engineer</p>
             <p class="card-role">Co-Founder</p>
             <p class="card-email">yahya@gmail.com</p>
-            <p><button class="button">Contact</button></p>
+            <p><a href="https://twitter.com/crest_inc_ng" target="_blank"><button class="button">Contact</button></a></p>
           </div>  
 
         </div>
