added a landing page thumbnail

--- a/template/pages/contact.html
+++ b/template/pages/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Contact Us-Tackerr</title>
     <link rel="stylesheet" href="style.css" />
-
+    <link rel='icon' type='x-icon' href='http://localhost:5000/static/assets/trackerr-logo.jpg'/>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
