--- a/template/pages/resetPassword.html
+++ b/template/pages/resetPassword.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link rel='icon' type='x-icon' href='http://localhost:5000/static/assets/trackerr-logo.jpg'/>
     <link rel="stylesheet" href="../static/styles/normalize.css" />
     <link
       rel="stylesheet"
