--- a/template/pages/500.html
+++ b/template/pages/500.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 page</title>
+    <link rel='icon' type='x-icon' href='http://localhost:5000/static/assets/trackerr-logo.jpg'/>
     <link rel="stylesheet" href="../static/styles/normalize.css" />
     <link rel="stylesheet" href="../static/styles/error.css" />
   </head>
