--- a/template/pages/landingPage.html
+++ b/template/pages/landingPage.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link
+        rel='icon'
+        type='x-icon'
+        href='http://localhost:5000/static/assets/trackerr-logo.jpg'
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="description"
