--- a/template/pages/login.html
+++ b/template/pages/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel='icon' type='x-icon' href='http://localhost:5000/static/assets/trackerr-logo.jpg'/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reset Password</title>
     <style>
