--- a/template/pages/registration.html
+++ b/template/pages/registration.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/styles/normalize.css">
+    <link rel='icon' type='x-icon' href='http://localhost:5000/static/assets/trackerr-logo.jpg'/>
     <title>Registration Page</title>
 
     <style>
