connected the generate button

--- a/template/pages/vendorPage.html
+++ b/template/pages/vendorPage.html
@@ -104,7 +104,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script src="../static/scripts/vendorPage.js"></script>
-    <script>
+  <!--  <script>
       $(document).ready(function () {
         let generatedTrackingNumber = "";
 
@@ -147,7 +147,7 @@
           return trackingNumber;
         }
       });
-    </script>
+  </script> -->
     <script>
       function myFunction() {
         var x = document.getElementById("myTopnav");
