--- a/template/pages/vendorPage.html
+++ b/template/pages/vendorPage.html
@@ -35,7 +35,7 @@
         <div class="topnav" id="myTopnav">
           <div class="nav-items">
             <div>
-              <a href="#logo" class="active"
+                <a href={{url_for('home')}} class="active"
                 ><img
                   width="70px"
                   height="50px"
