updated the 400 error page

--- a/template/pages/400.html
+++ b/template/pages/400.html
@@ -1,1 +1,22 @@
-Error 400
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel='icon' type='x-icon' href='http://localhost:5000/static/assets/trackerr-logo.jpg'/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>400 page</title>
+    <link rel="stylesheet" href="../static/styles/normalize.css" />
+    <link rel="stylesheet" href="../static/styles/error.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h2>400</h2>
+      <h3>Oops, Bad Request</h3>
+      <p>Grab a cup of coffee</p>
+      <p>
+        Otherwise, <a href="/"><button>Go to home</button></a>
+      </p>
+    </div>
+  </body>
+</html>
