--- a/template/pages/about.html
+++ b/template/pages/about.html
@@ -284,7 +284,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
             <h2 class="card-name">Yahaya</h2>
             <p class="card-email">Frontend Engineer</p>
             <p class="card-role">Co-Founder</p>
-            <p class="card-email">yahya@gmail.com</p>
+            <p class="card-email">lanrewese1@gmail.com</p>
             <p><a href="https://twitter.com/crest_inc_ng" target="_blank"><button class="button">Contact</button></a></p>
           </div>  
 
